@@ -22,7 +22,7 @@ plugins {
 apply plugin: 'net.minecraftforge.gradle.forge'
 apply plugin: 'net.cazzar.gradle.modsio'
 
-version = "1.4.0"
+version = "1.4.1"
 group = "the_fireplace.grandeconomy"
 archivesBaseName = "GrandEconomy-1.12.2"
 
