@@ -37,7 +37,7 @@ public class CommandWallet extends CommandBase {
             if(target == null)
                 throw new PlayerNotFoundException("commands.generic.player.notFound", args[1]);
             if ("balance".equals(args[0])) {
-                sender.sendMessage(TranslationUtil.getTranslation(sender, "commands.grandeconomy.wallet.balance", target.getName(), GrandEconomyApi.getBalance(target.getId(), true)));
+                sender.sendMessage(TranslationUtil.getTranslation(sender, "commands.grandeconomy.wallet.balance", target.getName(), GrandEconomyApi.getBalanceFormatted(target.getId(), true)));
                 return;
             }
             if(args.length > 2) {
@@ -46,21 +46,21 @@ public class CommandWallet extends CommandBase {
                     if(amount < 0)
                         throw new CommandException("commands.grandeconomy.wallet.negative", target.getName());
                     GrandEconomyApi.setBalance(target.getId(), amount, true);
-                    sender.sendMessage(TranslationUtil.getTranslation(sender, "commands.grandeconomy.wallet.set", target.getName(), GrandEconomyApi.getBalance(target.getId(), true)));
+                    sender.sendMessage(TranslationUtil.getTranslation(sender, "commands.grandeconomy.wallet.set", target.getName(), GrandEconomyApi.getBalanceFormatted(target.getId(), true)));
                     return;
                 }
                 if ("give".equals(args[0]) || "add".equals(args[0])) {
-                    if(GrandEconomyApi.getBalance(target.getId()) + amount < 0)
+                    if(GrandEconomyApi.getBalance(target.getId(), true) + amount < 0)
                         throw new CommandException("commands.grandeconomy.wallet.negative", target.getName());
                     GrandEconomyApi.addToBalance(target.getId(), amount, true);
-                    sender.sendMessage(TranslationUtil.getTranslation(sender, "commands.grandeconomy.wallet.given", amount, target.getName()));
+                    sender.sendMessage(TranslationUtil.getTranslation(sender, "commands.grandeconomy.wallet.given", GrandEconomyApi.toString(amount), target.getName()));
                     return;
                 }
                 if ("take".equals(args[0])) {
-                    if(GrandEconomyApi.getBalance(target.getId()) - amount < 0)
+                    if(GrandEconomyApi.getBalance(target.getId(), true) - amount < 0)
                         throw new CommandException("commands.grandeconomy.wallet.negative", target.getName());
                     GrandEconomyApi.takeFromBalance(target.getId(), amount, true);
-                    sender.sendMessage(TranslationUtil.getTranslation(sender, "commands.grandeconomy.wallet.taken", amount, target.getName()));
+                    sender.sendMessage(TranslationUtil.getTranslation(sender, "commands.grandeconomy.wallet.taken", GrandEconomyApi.toString(amount), target.getName()));
                     return;
                 }
             }
